# rag-document-pipeline

./: .env.example  .gitignore  CLAUDE.md  Consigne.txt  LICENSE  PROGRESSION.md  README.md  TESTING.md  metadata.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/meta/: metadata.json
demo/: run_demo.py  sample.html
processors/: README.md  __init__.py  html_processor.py  pdf_processor.py  requirements.txt  test_processors.py  url_processor.py  url_processor_with_cache.py
scripts/: README_PIPELINE.md  pipeline_orchestrator.py
tests/: conftest.py  test_chunking.py  test_cleaning.py  test_jsonl.py  test_metadata.py  test_processors.py
utils/: __init__.py  chunking.py  examples.py  gdrive_client.py  jsonl_writer.py  metadata_manager.py  text_cleaning.py
